--- a/taketwo-dsmvp-v1.ipynb
+++ b/taketwo-dsmvp-v1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.naive_bayes import MultinomialNB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,27 +65,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 134,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/naokieabe/Python/tutorial-env/lib/python3.7/site-packages/scikit-learn/doc/tutorial/text_analytics/data/twenty_newsgroups'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pwd"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +83,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#The following portion needs to be replaced by calls to appropriate data access API."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#marker_train.data is an array of strings (containing as many \"texts\" as there are coming from Marker.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#marker_train.target is an array of integers (containing the class indices for the above texts' class labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#marker_train_target_names is an array of class label names indexed by the array indices."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,41 +129,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
-    "twenty_train = fetch_20newsgroups(subset='train',\n",
+    "marker_train = fetch_20newsgroups(subset='train',\n",
     "     categories=categories, shuffle=True, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
-    "docs_new = ['OpenGL on the GPU is fast']"
+    "#flagger_new_text = fetch_20newsgroups(subset='test',\n",
+    "#                                      categories=categories, shuffle=True, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "comp.graphics\n",
+      "comp.graphics\n",
+      "soc.religion.christian\n",
+      "soc.religion.christian\n",
+      "soc.religion.christian\n",
+      "soc.religion.christian\n",
+      "soc.religion.christian\n",
+      "sci.med\n",
+      "sci.med\n",
+      "sci.med\n"
+     ]
+    }
+   ],
    "source": [
-    "#Function for model training"
+    "for t in marker_train.target[:10]:\n",
+    "...     print(marker_train.target_names[t])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def model_train(twenty_train): \n",
+    "#Classes for model representations packaging the components in the modeling pipeline.\n",
+    "#For SGDClassifier and NaiveBayes, but the one for DGDClassifier is untested."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ModelRepSGD:\n",
+    "    def __init__(self, count_vect, X_train_counts, tf_transformer, text_clf):\n",
+    "        self.count_vect = CountVectorizer()\n",
+    "        self.X_train_counts = self.count_vect.fit_transform(marker_train.data)\n",
+    "        self.tf_transformer = TfidfTransformer(use_idf=False).fit(self.X_train_counts)\n",
+    "        self.text_clf = Pipeline([\n",
+    "            ('vect', CountVectorizer()),\n",
+    "            ('tfidf', TfidfTransformer()),\n",
+    "            ('clf', SGDClassifier(loss='hinge', penalty='l2',\n",
+    "                                  alpha=1e-3, random_state=42,\n",
+    "                                  max_iter=5, tol=None)),\n",
+    "        ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ModelRepNB:\n",
+    "    def __init__(self, count_vect, X_train_counts, tf_transformer, clf):\n",
+    "        self.count_vect = CountVectorizer()\n",
+    "        self.X_train_counts = self.count_vect.fit_transform(marker_train.data)\n",
+    "        self.tf_transformer = TfidfTransformer(use_idf=False).fit(self.X_train_counts)\n",
+    "        self.clf = MultinomialNB()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Functions for model training - for SGDClassifier and NaiveBayes (SGD one is untested)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def model_train_SGD(marker_train): \n",
     "    count_vect = CountVectorizer()\n",
-    "    X_train_counts = count_vect.fit_transform(twenty_train.data)\n",
+    "    X_train_counts = count_vect.fit_transform(marker_train.data)\n",
     "    tf_transformer = TfidfTransformer(use_idf=False).fit(X_train_counts)\n",
     "    X_train_tf = tf_transformer.transform(X_train_counts)\n",
     "    text_clf = Pipeline([\n",
@@ -139,43 +252,53 @@
     "                              alpha=1e-3, random_state=42,\n",
     "                              max_iter=5, tol=None)),\n",
     "    ])\n",
-    "    parameters = {\n",
-    "        'vect__ngram_range': [(1, 1), (1, 2)],\n",
-    "        'tfidf__use_idf': (True, False),\n",
-    "        'clf__alpha': (1e-2, 1e-3),\n",
-    "    }\n",
-    "    gs_clf = GridSearchCV(text_clf, parameters, cv=5, n_jobs=-1)\n",
-    "    gs_clf = gs_clf.fit(twenty_train.data[:400], twenty_train.target[:400])\n",
-    "    for param_name in sorted(parameters.keys()):\n",
-    "        print(\"%s: %r\" % (param_name, gs_clf.best_params_[param_name]))\n",
-    "    return gs_clf.fit(twenty_train.data, twenty_train.target)"
+    "    text_clf.fit(marker_train.data, marker_train.target)\n",
+    "    trained_model = ModelRep(count_vect, X_train_counts, tf_transformer, text_clf)\n",
+    "    return trained_model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Function for model testing"
+    "def model_train_NB(marker_train): \n",
+    "    count_vect = CountVectorizer()\n",
+    "    X_train_counts = count_vect.fit_transform(marker_train.data)\n",
+    "    tf_transformer = TfidfTransformer(use_idf=False).fit(X_train_counts)\n",
+    "    X_train_tf = tf_transformer.transform(X_train_counts)\n",
+    "    clf = MultinomialNB().fit(X_train_tf, marker_train.target)\n",
+    "    trained_model = ModelRepNB(count_vect, X_train_counts, tf_transformer, clf)\n",
+    "    trained_model.clf = clf\n",
+    "    return trained_model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def model_test(docs_new, text_clf):\n",
-    "    X_new_counts = count_vect.transform(docs_new)\n",
+    "#Function for model testing (common for SGDClassifier and NB)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def model_test(flagger_new_test, count_vect, tf_transformer, text_clf):\n",
+    "    X_new_counts = count_vect.transform(flagger_new_test)\n",
     "    X_new_tfidf = tf_transformer.transform(X_new_counts)\n",
-    "    predicted = text_clf.predict(docs_new)\n",
+    "    predicted = text_clf.predict(X_new_tfidf)\n",
     "    return predicted"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,94 +307,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 245,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/naokieabe/opt/anaconda3/lib/python3.7/site-packages/sklearn/model_selection/_search.py:814: DeprecationWarning: The default of the `iid` parameter will change from True to False in version 0.22 and will be removed in 0.24. This will change numeric results when test-set sizes are unequal.\n",
-      "  DeprecationWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "clf__alpha: 0.001\n",
-      "tfidf__use_idf: True\n",
-      "vect__ngram_range: (1, 1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "text_clf = model_train(twenty_train)"
+    "trained_model = model_train_NB(marker_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Inspecting the components of the trained model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "GridSearchCV(cv=5, error_score='raise-deprecating',\n",
-       "             estimator=Pipeline(memory=None,\n",
-       "                                steps=[('vect',\n",
-       "                                        CountVectorizer(analyzer='word',\n",
-       "                                                        binary=False,\n",
-       "                                                        decode_error='strict',\n",
-       "                                                        dtype=<class 'numpy.int64'>,\n",
-       "                                                        encoding='utf-8',\n",
-       "                                                        input='content',\n",
-       "                                                        lowercase=True,\n",
-       "                                                        max_df=1.0,\n",
-       "                                                        max_features=None,\n",
-       "                                                        min_df=1,\n",
-       "                                                        ngram_range=(1, 1),\n",
-       "                                                        preprocessor=None,\n",
-       "                                                        stop_words=None,\n",
-       "                                                        strip_accents=None,\n",
-       "                                                        tok...\n",
-       "                                                      n_jobs=None, penalty='l2',\n",
-       "                                                      power_t=0.5,\n",
-       "                                                      random_state=42,\n",
-       "                                                      shuffle=True, tol=None,\n",
-       "                                                      validation_fraction=0.1,\n",
-       "                                                      verbose=0,\n",
-       "                                                      warm_start=False))],\n",
-       "                                verbose=False),\n",
-       "             iid='warn', n_jobs=-1,\n",
-       "             param_grid={'clf__alpha': (0.01, 0.001),\n",
-       "                         'tfidf__use_idf': (True, False),\n",
-       "                         'vect__ngram_range': [(1, 1), (1, 2)]},\n",
-       "             pre_dispatch='2*n_jobs', refit=True, return_train_score=False,\n",
-       "             scoring=None, verbose=0)"
+       "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text_clf"
+    "trained_model.clf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CountVectorizer(analyzer='word', binary=False, decode_error='strict',\n",
+       "                dtype=<class 'numpy.int64'>, encoding='utf-8', input='content',\n",
+       "                lowercase=True, max_df=1.0, max_features=None, min_df=1,\n",
+       "                ngram_range=(1, 1), preprocessor=None, stop_words=None,\n",
+       "                strip_accents=None, token_pattern='(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
+       "                tokenizer=None, vocabulary=None)"
+      ]
+     },
+     "execution_count": 248,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trained_model.count_vect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TfidfTransformer(norm='l2', smooth_idf=True, sublinear_tf=False, use_idf=False)"
+      ]
+     },
+     "execution_count": 249,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trained_model.tf_transformer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "predicted = model_test(docs_new, text_clf)"
+    "#Calling model tester/predictor on a new text from Flagger"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 250,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flagger_new_text = ['OpenGL on the GPU is fast']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predicted = model_test(flagger_new_text, trained_model.count_vect, trained_model.tf_transformer, trained_model.clf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +426,7 @@
        "array([1])"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 253,
      "metadata": {},
      "output_type": "execute_result"
     }
