--- a/taketwo-dsmvp-v1.ipynb
+++ b/taketwo-dsmvp-v1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,14 +149,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,20 +285,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def model_test(flagger_new_test, count_vect, tf_transformer, text_clf):\n",
+    "def model_test(flagger_new_test, trained_model):\n",
+    "    count_vect = trained_model.count_vect\n",
+    "    tf_transformer = trained_model.tf_transformer\n",
+    "    clf = trained_model.clf\n",
     "    X_new_counts = count_vect.transform(flagger_new_test)\n",
     "    X_new_tfidf = tf_transformer.transform(X_new_counts)\n",
-    "    predicted = text_clf.predict(X_new_tfidf)\n",
+    "    predicted = clf.predict(X_new_tfidf)\n",
     "    return predicted"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +337,7 @@
        "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +362,7 @@
        "                tokenizer=None, vocabulary=None)"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +382,7 @@
        "TfidfTransformer(norm='l2', smooth_idf=True, sublinear_tf=False, use_idf=False)"
       ]
      },
-     "execution_count": 249,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,16 +411,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
-    "predicted = model_test(flagger_new_text, trained_model.count_vect, trained_model.tf_transformer, trained_model.clf)"
+    "predicted = model_test(flagger_new_text, trained_model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +429,7 @@
        "array([1])"
       ]
      },
-     "execution_count": 253,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
