add data source to python code

--- a/taketwo-dsmvp-v1.ipynb
+++ b/taketwo-dsmvp-v1.ipynb
@@ -2,15 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 204,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.datasets import fetch_20newsgroups"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 205,
    "metadata": {},
    "outputs": [],
@@ -74,20 +65,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Fetch data and store them in appropriate arrays"
+    "import requests\n",
+    "\n",
+    "API_URL = \"http://taketwo-webapi-route-embrace-dev-js.embrace-dev-ocp43-vpc-7ec5d722a0ab3f463fdc90eeb94dbc70-0000.us-east.containers.appdomain.cloud/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#The following portion needs to be replaced by calls to appropriate data access API."
+    "#get the categories\n",
+    "response = requests.get(API_URL + \"categories\")\n",
+    "if response.status_code == 200:\n",
+    "    categories = [category[\"name\"] for category in response.json()]\n",
+    "    categories += [\"racial slur\"] #add additional not in the API manually"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Fetch data and store them in appropriate arrays\n",
+    "response = requests.get(API_URL + \"mark\")\n",
+    "if response.status_code == 200:\n",
+    "    raw_data = response.json()\n",
+    "    \n",
+    "response.status_code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import namedtuple\n",
+    "data_set = namedtuple('data_set', [\"data\", \"urls\", \"target_names\", \"target\"])([],[],categories,[])\n",
+    "\n",
+    "for row in raw_data:\n",
+    "    if row['category'] in categories:\n",
+    "        data_set.data.append(row[\"flagged_string\"])\n",
+    "        data_set.urls.append(row[\"url\"])\n",
+    "        data_set.target.append(categories.index(row['category']))"
    ]
   },
   {
@@ -119,22 +157,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "categories = ['alt.atheism', 'soc.religion.christian',\n",
-    "               'comp.graphics', 'sci.med']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 218,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "marker_train = fetch_20newsgroups(subset='train',\n",
-    "     categories=categories, shuffle=True, random_state=42)"
+    "marker_train = data_set"
    ]
   },
   {
@@ -156,23 +183,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "comp.graphics\n",
-      "comp.graphics\n",
-      "soc.religion.christian\n",
-      "soc.religion.christian\n",
-      "soc.religion.christian\n",
-      "soc.religion.christian\n",
-      "soc.religion.christian\n",
-      "sci.med\n",
-      "sci.med\n",
-      "sci.med\n"
+      "racial slur\n",
+      "racial slur\n",
+      "gaslighting\n",
+      "racial slur\n",
+      "racial slur\n",
+      "stereotyping\n",
+      "appropriation\n",
+      "deflection\n",
+      "racial slur\n",
+      "racial slur\n"
      ]
     }
    ],
@@ -455,7 +482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
