--- a/taketwo-dsmvp-v1.ipynb
+++ b/taketwo-dsmvp-v1.ipynb
@@ -71,7 +71,7 @@
    "source": [
     "import requests\n",
     "\n",
-    "API_URL = \"http://taketwo-webapi-route-embrace-dev-js.embrace-dev-ocp43-vpc-7ec5d722a0ab3f463fdc90eeb94dbc70-0000.us-east.containers.appdomain.cloud/\""
+    "API_URL = \"<databaseurl>/\""
    ]
   },
   {
