removing apikey. Also deleted apikey in cloud

--- a/taketwo-dsmvp-v1.ipynb
+++ b/taketwo-dsmvp-v1.ipynb
@@ -1764,14 +1764,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already up-to-date: ibm_watson_machine_learning in /Users/upkar/opt/anaconda3/lib/python3.8/site-packages (1.0.100)\n",
+      "Requirement already satisfied, skipping upgrade: tabulate in /Users/upkar/opt/anaconda3/lib/python3.8/site-packages (from ibm_watson_machine_learning) (0.8.7)\n",
+      "Requirement already satisfied, skipping upgrade: ibm-cos-sdk==2.7.* in /Users/upkar/opt/anaconda3/lib/python3.8/site-packages (from ibm_watson_machine_learning) (2.7.0)\n",
+      "Requirement already satisfied, skipping upgrade: requests in /Users/upkar/opt/anaconda3/lib/python3.8/site-packages (from ibm_watson_machine_learning) (2.24.0)\n",
+      "Requirement already satisfied, skipping upgrade: pandas<1.3.0,>=0.24.2 in /Users/upkar/opt/anaconda3/lib/python3.8/site-packages (from ibm_watson_machine_learning) (1.0.5)\n",
+      "Requirement already satisfied, skipping upgrade: lomond in /Users/upkar/opt/anaconda3/lib/python3.8/site-packages (from ibm_watson_machine_learning) (0.3.3)\n",
+      "Requirement already satisfied, skipping upgrade: urllib3 in /Users/upkar/opt/anaconda3/lib/python3.8/site-packages (from ibm_watson_machine_learning) (1.25.9)\n",
+      "Requirement already satisfied, skipping upgrade: certifi in /Users/upkar/opt/anaconda3/lib/python3.8/site-packages (from ibm_watson_machine_learning) (2020.6.20)\n",
+      "Requirement already satisfied, skipping upgrade: packaging in /Users/upkar/opt/anaconda3/lib/python3.8/site-packages (from ibm_watson_machine_learning) (20.4)\n",
+      "Processing /Users/upkar/Library/Caches/pip/wheels/54/a5/95/ac2068077b0f41719c2a69a03fdfbdd76ad02cdbb0984ad1a7/ibm_cos_sdk_core-2.7.0-py2.py3-none-any.whl\n",
+      "Requirement already satisfied, skipping upgrade: jmespath<1.0.0,>=0.7.1 in /Users/upkar/opt/anaconda3/lib/python3.8/site-packages (from ibm-cos-sdk==2.7.*->ibm_watson_machine_learning) (0.10.0)\n",
+      "Requirement already satisfied, skipping upgrade: ibm-cos-sdk-s3transfer==2.7.0 in /Users/upkar/opt/anaconda3/lib/python3.8/site-packages (from ibm-cos-sdk==2.7.*->ibm_watson_machine_learning) (2.7.0)\n",
+      "Requirement already satisfied, skipping upgrade: chardet<4,>=3.0.2 in /Users/upkar/opt/anaconda3/lib/python3.8/site-packages (from requests->ibm_watson_machine_learning) (3.0.4)\n",
+      "Requirement already satisfied, skipping upgrade: idna<3,>=2.5 in /Users/upkar/opt/anaconda3/lib/python3.8/site-packages (from requests->ibm_watson_machine_learning) (2.10)\n",
+      "Requirement already satisfied, skipping upgrade: numpy>=1.13.3 in /Users/upkar/opt/anaconda3/lib/python3.8/site-packages (from pandas<1.3.0,>=0.24.2->ibm_watson_machine_learning) (1.19.4)\n",
+      "Requirement already satisfied, skipping upgrade: pytz>=2017.2 in /Users/upkar/opt/anaconda3/lib/python3.8/site-packages (from pandas<1.3.0,>=0.24.2->ibm_watson_machine_learning) (2020.1)\n",
+      "Requirement already satisfied, skipping upgrade: python-dateutil>=2.6.1 in /Users/upkar/opt/anaconda3/lib/python3.8/site-packages (from pandas<1.3.0,>=0.24.2->ibm_watson_machine_learning) (2.8.1)\n",
+      "Requirement already satisfied, skipping upgrade: six>=1.10.0 in /Users/upkar/opt/anaconda3/lib/python3.8/site-packages (from lomond->ibm_watson_machine_learning) (1.15.0)\n",
+      "Requirement already satisfied, skipping upgrade: pyparsing>=2.0.2 in /Users/upkar/opt/anaconda3/lib/python3.8/site-packages (from packaging->ibm_watson_machine_learning) (2.4.7)\n",
+      "Requirement already satisfied, skipping upgrade: docutils<0.16,>=0.10 in /Users/upkar/opt/anaconda3/lib/python3.8/site-packages (from ibm-cos-sdk-core==2.7.0->ibm-cos-sdk==2.7.*->ibm_watson_machine_learning) (0.15.2)\n",
+      "Installing collected packages: ibm-cos-sdk-core\n",
+      "  Attempting uninstall: ibm-cos-sdk-core\n",
+      "    Found existing installation: ibm-cos-sdk-core 2.10.0\n",
+      "    Uninstalling ibm-cos-sdk-core-2.10.0:\n",
+      "      Successfully uninstalled ibm-cos-sdk-core-2.10.0\n",
+      "Successfully installed ibm-cos-sdk-core-2.7.0\n",
+      "Processing /Users/upkar/Library/Caches/pip/wheels/ce/df/1e/1da07def7155e0dd5cb2d93925ac6c0026042ecd3d3411ed9e/ibm_cos_sdk_core-2.10.0-py2.py3-none-any.whl\n",
+      "Requirement already satisfied, skipping upgrade: jmespath<1.0.0,>=0.7.1 in /Users/upkar/opt/anaconda3/lib/python3.8/site-packages (from ibm-cos-sdk-core) (0.10.0)\n",
+      "Requirement already satisfied, skipping upgrade: python-dateutil<3.0.0,>=2.1 in /Users/upkar/opt/anaconda3/lib/python3.8/site-packages (from ibm-cos-sdk-core) (2.8.1)\n",
+      "Requirement already satisfied, skipping upgrade: requests<3.0,>=2.18 in /Users/upkar/opt/anaconda3/lib/python3.8/site-packages (from ibm-cos-sdk-core) (2.24.0)\n",
+      "Requirement already satisfied, skipping upgrade: six>=1.5 in /Users/upkar/opt/anaconda3/lib/python3.8/site-packages (from python-dateutil<3.0.0,>=2.1->ibm-cos-sdk-core) (1.15.0)\n",
+      "Requirement already satisfied, skipping upgrade: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /Users/upkar/opt/anaconda3/lib/python3.8/site-packages (from requests<3.0,>=2.18->ibm-cos-sdk-core) (1.25.9)\n",
+      "Requirement already satisfied, skipping upgrade: certifi>=2017.4.17 in /Users/upkar/opt/anaconda3/lib/python3.8/site-packages (from requests<3.0,>=2.18->ibm-cos-sdk-core) (2020.6.20)\n",
+      "Requirement already satisfied, skipping upgrade: idna<3,>=2.5 in /Users/upkar/opt/anaconda3/lib/python3.8/site-packages (from requests<3.0,>=2.18->ibm-cos-sdk-core) (2.10)\n",
+      "Requirement already satisfied, skipping upgrade: chardet<4,>=3.0.2 in /Users/upkar/opt/anaconda3/lib/python3.8/site-packages (from requests<3.0,>=2.18->ibm-cos-sdk-core) (3.0.4)\n",
+      "\u001b[31mERROR: ibm-cos-sdk 2.7.0 has requirement ibm-cos-sdk-core==2.7.0, but you'll have ibm-cos-sdk-core 2.10.0 which is incompatible.\u001b[0m\n",
+      "\u001b[31mERROR: ibm-cos-sdk-s3transfer 2.7.0 has requirement ibm-cos-sdk-core==2.7.0, but you'll have ibm-cos-sdk-core 2.10.0 which is incompatible.\u001b[0m\n",
+      "Installing collected packages: ibm-cos-sdk-core\n",
+      "  Attempting uninstall: ibm-cos-sdk-core\n",
+      "    Found existing installation: ibm-cos-sdk-core 2.7.0\n",
+      "    Uninstalling ibm-cos-sdk-core-2.7.0:\n",
+      "      Successfully uninstalled ibm-cos-sdk-core-2.7.0\n",
+      "Successfully installed ibm-cos-sdk-core-2.10.0\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "!pip install -U ibm_watson_machine_learning\n",
     "!pip install -U ibm-cos-sdk-core\n"
@@ -1779,7 +1824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1788,14 +1833,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# add apikey here\n",
     "wml_credentials = {\n",
     "                   \"url\": \"https://eu-gb.ml.cloud.ibm.com\",\n",
-    "                   \"apikey\":\"YkU_2XKSqz_ujIoL1sAU-R3jniWTTVu3U4jhWpHsW_nm\"\n",
+    "                   \"apikey\":\"Insert key here\"\n",
     "                  }\n",
     "\n",
     "client = APIClient(wml_credentials)"
@@ -2088,14 +2133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2103,17 +2141,28 @@
     "count_vect = trained_model_NB.count_vect\n",
     "tf_transformer = trained_model_NB.tf_transformer\n",
     "clf = trained_model_NB.clf\n",
-    "X_new_counts = count_vect.transform(marker_test.data[0:1])\n",
+    "X_new_counts = count_vect.transform(marker_test.data[0:10])\n",
     "X_new_tfidf = tf_transformer.transform(X_new_counts)\n",
     "\n",
     "\n",
     "valuesList = X_new_tfidf.todense().tolist()\n",
-    "payload_scoring = {\"input_data\": [{\"values\": valuesList}]}"
+    "payload_scoring = {\"input_data\": [{\"values\": valuesList}]}\n",
+    "\n",
+    "\n",
+    "\n",
+    "# def model_test(flagger_new_test, trained_model):\n",
+    "#     count_vect = trained_model.count_vect\n",
+    "#     tf_transformer = trained_model.tf_transformer\n",
+    "#     clf = trained_model.clf\n",
+    "#     X_new_counts = count_vect.transform(flagger_new_test)\n",
+    "#     X_new_tfidf = tf_transformer.transform(X_new_counts)\n",
+    "#     predicted = clf.predict(X_new_tfidf)\n",
+    "#     return predicted"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -2121,21 +2170,21 @@
      "output_type": "stream",
      "text": [
       "Failure during scoring. (POST https://eu-gb.ml.cloud.ibm.com/ml/v4/deployments/af0cf9ba-97ba-470c-982e-665259df01bd/predictions?version=2020-08-01)\n",
-      "Status code: 400, body: {\"trace\": \"25b016b9c31a4d6051c29cea146b9edd\", \"errors\": [{\"code\": \"score_processing_failure\", \"message\": \"matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 99873 is different from 99822)\"}], \"status_code\": 400}\n",
+      "Status code: 400, body: {\"trace\": \"1597c2eddf1c9ab0609cac9555c836bf\", \"errors\": [{\"code\": \"score_processing_failure\", \"message\": \"matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 99873 is different from 99822)\"}], \"status_code\": 400}\n",
       "\n"
      ]
     },
     {
      "ename": "ApiRequestFailure",
-     "evalue": "Failure during scoring. (POST https://eu-gb.ml.cloud.ibm.com/ml/v4/deployments/af0cf9ba-97ba-470c-982e-665259df01bd/predictions?version=2020-08-01)\nStatus code: 400, body: {\"trace\": \"25b016b9c31a4d6051c29cea146b9edd\", \"errors\": [{\"code\": \"score_processing_failure\", \"message\": \"matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 99873 is different from 99822)\"}], \"status_code\": 400}\n",
+     "evalue": "Failure during scoring. (POST https://eu-gb.ml.cloud.ibm.com/ml/v4/deployments/af0cf9ba-97ba-470c-982e-665259df01bd/predictions?version=2020-08-01)\nStatus code: 400, body: {\"trace\": \"1597c2eddf1c9ab0609cac9555c836bf\", \"errors\": [{\"code\": \"score_processing_failure\", \"message\": \"matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 99873 is different from 99822)\"}], \"status_code\": 400}\n",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mApiRequestFailure\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-172-5f1f673474ec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpredictions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclient\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdeployments\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'af0cf9ba-97ba-470c-982e-665259df01bd'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpayload_scoring\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-184-5f1f673474ec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpredictions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclient\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdeployments\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'af0cf9ba-97ba-470c-982e-665259df01bd'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpayload_scoring\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/ibm_watson_machine_learning/deployments.py\u001b[0m in \u001b[0;36mscore\u001b[0;34m(self, deployment_id, meta_props, transaction_id)\u001b[0m\n\u001b[1;32m    677\u001b[0m                     verify=False)\n\u001b[1;32m    678\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 679\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_handle_response\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m200\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mu'scoring'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresponse_scoring\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    680\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    681\u001b[0m         \u001b[0;31m#########################################\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/ibm_watson_machine_learning/wml_resource.py\u001b[0m in \u001b[0;36m_handle_response\u001b[0;34m(self, expected_status_code, operationName, response, json_response)\u001b[0m\n\u001b[1;32m     71\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 73\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mApiRequestFailure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mu'Failure during {}.'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moperationName\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     74\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mstaticmethod\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mApiRequestFailure\u001b[0m: Failure during scoring. (POST https://eu-gb.ml.cloud.ibm.com/ml/v4/deployments/af0cf9ba-97ba-470c-982e-665259df01bd/predictions?version=2020-08-01)\nStatus code: 400, body: {\"trace\": \"25b016b9c31a4d6051c29cea146b9edd\", \"errors\": [{\"code\": \"score_processing_failure\", \"message\": \"matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 99873 is different from 99822)\"}], \"status_code\": 400}\n"
+      "\u001b[0;31mApiRequestFailure\u001b[0m: Failure during scoring. (POST https://eu-gb.ml.cloud.ibm.com/ml/v4/deployments/af0cf9ba-97ba-470c-982e-665259df01bd/predictions?version=2020-08-01)\nStatus code: 400, body: {\"trace\": \"1597c2eddf1c9ab0609cac9555c836bf\", \"errors\": [{\"code\": \"score_processing_failure\", \"message\": \"matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 99873 is different from 99822)\"}], \"status_code\": 400}\n"
      ]
     }
    ],
